# Hanoi

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  cloudscript.js  index.html  robots.txt  simulator_device.cfg
.claude/: settings.json
Classes/: AndroidBilling.cpp  AndroidBilling.h  AppDelegate.cpp  Clipboard.cpp  Clipboard.h  Clipboard_apple.mm  Discus.cpp  Discus.h  DrawUtils.cpp  DrawUtils.h  GameConfig.h  HanoiAppDelegate.h  HanoiAppDelegate.m  HanoiAppDelegate.mm  HelloWorldScene.cpp  IAPDelegate.h  IAPManager.cpp  IAPManager.h  IAPManager_ios.mm  LeaderboardManager.cpp  LeaderboardManager.h  MKDelegateCPP.h  MKDelegateCPP.mm  MKStoreManager.h  MKStoreManager.mm  MKStoreManagerDelegate.cpp  MKStoreManagerDelegate.h  MKStoreManager_cpp.cpp  MKStoreManager_cpp.h  MKStoreManager_mm.h  MKStoreManager_mm.mm  MKStoreObserver.h  MainScene.cpp  MainScene.h  MainSceneInternal.h  MainScene_Bgm.cpp  MainScene_Dialog.cpp  MainScene_Rank.cpp  NativeShare.cpp  NativeShare.h  (+31 more)
Icon/_source/: apply_icons.py  build_medal.py
Resources/: Info.plist  Info_free.plist  Info_kr.plist  greetings.plist  random_names.txt
Resources/NewUI/: Untitled-1.psd  btn_comment.psd  btn_rank_n.psd  coin_bank_icon.psd  dong_star.psd  email_icon.psd  main_bg.psd  main_ranking_bg.psd  speaker.psd  text.psd  title.psd  게임화면.psd  로고들.psd
docs/: architecture.md  aso_keywords.md  battle_reward_plan.md  popup_design_plan.md  replay_ghost_plan.md  replay_like_plan.md  store_listing.md
landing/: index.html  privacy.html  sitemap.xml
legacy_ios/: PlayScene.m  README.md
proj.android/: build.gradle  gradle.properties  gradlew.bat  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle  proguard-rules.pro
proj.android/app/res/drawable/: splash_logo.xml
proj.android/app/res/values/: colors.xml  strings.xml  themes.xml
proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java  AppReviewManager.java  BillingManager.java
proj.ios_mac/ios/: Info.plist  LaunchScreen.storyboard  main.m
proj.ios_mac/ios/Images.xcassets/AppIcon.appiconset/: Contents.json
proj.ios_mac/ios/Images.xcassets/SplashLogo.imageset/: Contents.json
proj.ios_mac/mac/: Info.plist  main.cpp
proj.win32/: main.h
server/: PHASE0_DEPLOY.md  admin_award.ps1  banned_extra_ko.txt  banned_words.json  build_banned_words.py
tools/: gen_bgm2_am.py  gen_bgm_cosmos.py  gen_bgm_earth.py  gen_bgm_moon.py  gen_bgm_nova.py  gen_bgm_play_calm.py  gen_sounds.py  playfab_cleanup.js  preview_click.py
